syntax = "proto3";
package auth;
option go_package = "github.com/magabrotheeeer/subscription-aggregator/internal/grpc/proto;authpb";

// gRPC Auth-сервис
service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// Регистрация нового пользователя
message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

// Логин пользователя
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refresh_token = 2;
  string role = 3;
}

// Проверка валидности JWT
message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string username = 2;
  string role = 3;
  string error = 4;
}

